<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_establishment_list"
        android:icon="@drawable/ic_establishments"
        android:title="@string/title_fragment_establishment_list" />

    <item
        android:id="@+id/navigation_drinktype_list"
        android:icon="@drawable/ic_cocktail"
        android:title="@string/title_fragment_drinktype_list" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_fragment_profile" />

    <item
        android:id="@+id/navigation_establishment_menu"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_fragment_drinks_menu" />

    <item
        android:id="@+id/navigation_establishment_info"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_fragment_establishment_info" />

    <item
        android:id="@+id/navigation_establishment_reviews"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_fragment_reviews" />

</menu>