<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_establishment_list">

    <fragment
        android:id="@+id/navigation_establishment_list"
        android:name="hbv601g.hugb2_team2.ui.activities.main.fragments.establishment_list_fragment.EstablishmentListFragment"
        android:label="@string/title_fragment_establishment_list"
        tools:layout="@layout/fragment_establishment_list" />

    <fragment
        android:id="@+id/navigation_drinktype_list"
        android:name="hbv601g.hugb2_team2.ui.activities.main.fragments.drinktype_list_fragment.DrinkTypeListFragment"
        android:label="@string/title_fragment_drinktype_list"
        tools:layout="@layout/fragment_drinktype_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="hbv601g.hugb2_team2.ui.activities.main.fragments.profile_fragment.ProfileFragment"
        android:label="@string/title_fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>